After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 709522 - [PATCH] GtkFileChooser sidebar is not populated since 742a2f11
[PATCH] GtkFileChooser sidebar is not populated since 742a2f11
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkFileChooser
3.10.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
Federico Mena Quintero
: 711193 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2013-10-06 17:58 UTC by John Lindgren
Modified: 2013-10-31 12:19 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Populate GtkPlacesSidebar at initialization (380 bytes, patch)
2013-10-06 17:58 UTC, John Lindgren
committed Details | Review

Description John Lindgren 2013-10-06 17:58:16 UTC
Created attachment 256583 [details] [review]
Populate GtkPlacesSidebar at initialization

This commit introduced a regression in GtkFileChooser:

commit 742a2f11a95a1e9ce56fe1a628743c7e8add8a57
Author: Cosimo Cecchi <cosimoc@gnome.org>
Date:   Mon Jan 21 18:04:14 2013 -0500

    Remove useless style_set override

Previously, the "Places" sidebar was populated by the update_places() call from within gtk_places_sidebar_style_set().  Now, update_places() is never called and the sidebar is never populated unless gtk_places_sidebar_add_shortcut() happens to be called.  The attached patch fixes this by calling update_places() at the end of gtk_places_sidebar_init().
Comment 1 John Lindgren 2013-10-06 18:03:30 UTC
Background, from IRC:
<jlindgren> I've got this weird bug where the open dialog doesn't work properly if the current working directory is my home directory.
<jlindgren> In any other directory it works fine.
<jlindgren> But in my home directory the sidebar doesn't get populated at all.
<Company> fun
...
<jlindgren> 742a2f11a95a1e9ce56fe1a628743c7e8add8a57 broke the filechooser sidebar.
<jlindgren> It's only by chance that it works in other directories calling gtk_places_sidebar_add_shortcut() triggers the sidebar to get populated.
<jlindgren> *because calling
<Company> looks like an update_places() call is missing somewhere important
<jlindgren> Yeah, it probably didn't belong in style_set(), but it needs to be added somewhere else.
<Company> right
Comment 2 Matthias Clasen 2013-10-06 20:06:39 UTC
Attachment 256583 [details] pushed as 17a1f4a - Populate GtkPlacesSidebar at initialization
Comment 3 Matthew Barnes 2013-10-31 12:19:22 UTC
*** Bug 711193 has been marked as a duplicate of this bug. ***